# OZConding_FastAPI

02_DAY2/FastAPI인강/testenv/: pyproject.toml
02_DAY2/FastAPI인강/testenv/tests/: test_temp.py
실습/2일차/: test_simple.py
실습/3일차/: argi.py
